2005-02-18 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py (draw_path,draw_bar): Fill, then stroke.
	* src/DbPrompter.py: Change file filter name.

	* src/Report.py (doc_type_changed): Deal with empty extensions.
	* src/docgen/AsciiDoc.py (add_photo): Add method;
	(end_row): Inlcude last cell into proper formatting.
	* src/GedcomInfo.py: Properly import expat.ParserCreate class.
	* src/TipOfDay.py: Properly import expat.ParserCreate class.
	* src/RecentFiles.py: Properly import expat.ParserCreate class.
	* src/ReadXML.py: Properly import expat.* classes.
	* doc/gramps-manual/C/usage.xml: Update.
	* doc/gramps-manual/C/usage.xml: Update.
	* doc/xmldocs.make: Switch Makefile from CLEANFILES to DISTCLEANFILES.
	* src/Makefile.am: Add const.pyc and const.pyo to CLEANFILES.

	* src/EditPerson.py: Readonly fix.
	* src/gramps.glade: Typo.

2005-02-18  Eero Tamminen <eerot@sf>
	* src/plugins/StatisticsChart.py: fix date object checking

2005-02-17  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson.py: more readonly support
	* src/NoteEdit.py: more readonly support
	* src/Sources.py: more readonly support
	* src/gramps_main.py: more readonly support
	* src/gramps.glade: more readonly support

2005-02-17 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py (write_at): Correct vertical offset.
	* src/docgen/PdfDoc.py (write_at,draw_bar): Add functions.
	* src/docgen/PSDrawDoc.py (write_at): Add function;
	(draw_bar): Support for filling with color.
	* src/ReportUtils.py (draw_legend): Correct vertical offset.

	* src/docgen/OpenOfficeDoc.py: Typo.

2005-02-16  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditSource.py: commit events after deleting sources
	* src/Marriage.py: disable buttons in readonly mode
	* src/EditPerson.py: disable buttons in readonly mode
	* src/Sources.py: disable buttons in readonly mode
	* src/gramps.glade: name buttons

2005-02-16  Eero Tamminen <eerot@sf>