@@ -1,3 +1,9 @@
+2005-02-18  Don Allingham  <dallingham@users.sourceforge.net>
+	* src/EditPerson.py: more readonly patches
+	* src/EventEdit.py: more readonly patches
+	* src/Marriage.py: more readonly patches
+	* src/gramps.glade: more readonly patches
+
 2005-02-18 Alex Roitman  <shura@alex.neuro.umn.edu>
 	* src/docgen/LPRDoc.py (draw_path,draw_bar): Fill, then stroke.
 	* src/DbPrompter.py: Change file filter name.
